Actualizar AUTOS DG.HTML

--- a/AUTOS DG.HTML
+++ b/AUTOS DG.HTML
@@ -221,7 +221,7 @@
 
 <!-- REVISTA -->
 <section id="REVISTA">
-  <h2>Camionetas Nuevas</h2>
+  <h2>REVISTA</h2>
   <div class="car">
     <embed src="Revista (Pre) (7).pdf" type="application/pdf" width="100%" height="500">
     <div class="car-info">
